--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Tools
-tools/dev/toolchain/
+# Toolchain
+utils/toolchain
 
 # Doxygen
 doc/html
@@ -18,16 +18,25 @@ nanvix-cluster*
 # Ctags
 tags
 
-# HAL Headers
-include/arch/
-include/dev/
-include/grub/
-include/machine/
-include/nanvix/
-include/nanvix.h
-include/posix
-
 # IDEs
 *.swp
 *.swo
 *.vscode/
+
+# HAL Headers
+include/arch/
+include/grub/
+include/machine/
+include/nanvix/hal/
+include/nanvix/cc.h
+include/nanvix/const.h
+include/nanvix/klib.h
+include/posix/
+
+# Kernel Headers
+include/dev/
+include/nanvix/kernel/
+
+# Nanvix Library
+include/nanvix/runtime/stdikc.h
+include/nanvix/sys/
