--- a/.travis.yml
+++ b/.travis.yml
@@ -37,19 +37,19 @@ jobs:
   include:
     # Build Debug
     - stage: "Build Debug"
-      name: "QEMU RISC-V 32-Bit"
-      script: docker run -v"$(pwd):$MOUNT_DIR/ulibc" -p4567:4567 nanvix/toolchain-riscv32 /bin/sh -c "cd $MOUNT_DIR/ulibc && export TARGET=qemu-riscv32 && export TOOLCHAIN_DIR=/root/toolchain/riscv32/bin && export RELEASE=false && make contrib && make all"
+      name: "QEMU RISC-V 32-bit"
+      script: docker run -v "$(pwd):/mnt" -p 4567:4567 nanvix/ubuntu:qemu-riscv32  /bin/bash -l -c "cd /mnt && make contrib && make all"
     - stage: "Build Debug"
       name: "Unix 64-bit"
-      script: docker run -v"$(pwd):$MOUNT_DIR/ulibc" -p 4567:4567 nanvix/ubuntu:unix64    /bin/bash -l -c "cd $MOUNT_DIR/ulibc && export TARGET=unix64 && export RELEASE=false && make contrib && make all"
+      script: docker run -v "$(pwd):/mnt" -p 4567:4567 nanvix/ubuntu:unix64        /bin/bash -l -c "cd /mnt && make contrib && make all"
 
     # Build Release
     - stage: "Build Release"
-      name: "QEMU RISC-V 32-Bit"
-      script: docker run -v"$(pwd):$MOUNT_DIR/ulibc" -p4567:4567 nanvix/toolchain-riscv32 /bin/sh -c "cd $MOUNT_DIR/ulibc && export TARGET=qemu-riscv32 && export TOOLCHAIN_DIR=/root/toolchain/riscv32/bin && export RELEASE=true && make contrib && make all"
+      name: "QEMU RISC-V 32-bit"
+      script: docker run -v "$(pwd):/mnt" -p 4567:4567 nanvix/ubuntu:qemu-riscv32  /bin/bash -l -c "cd /mnt && export RELEASE=true && make contrib && make all"
     - stage: "Build Release"
       name: "Unix 64-bit"
-      script: docker run -v"$(pwd):$MOUNT_DIR/ulibc" -p 4567:4567 nanvix/ubuntu:unix64    /bin/bash -l -c "cd $MOUNT_DIR/ulibc && export TARGET=unix64 && export RELEASE=true && make contrib && make all"
+      script: docker run -v "$(pwd):/mnt" -p 4567:4567 nanvix/ubuntu:unix64        /bin/bash -l -c "cd /mnt && export RELEASE=true && make contrib && make all"
 
 notifications:
   slack: nanvix:31ePVjsrXynUajPUDqy6I0hp
