--- a/test/makefile
+++ b/test/makefile
@@ -41,7 +41,7 @@ LIBS += $(LIBDIR)/$(LIBKERNEL)
 ifneq ($(LIBLWIP),)
 LIBS += $(LIBDIR)/$(LIBLWIP)
 endif
-LIBS += $(LIBDIR)/$(KLIB) $(THEIR_LIBS)
+LIBS += $(LIBDIR)/$(BARELIB) $(THEIR_LIBS)
 
 #===============================================================================
 # Sources
