Enhancement: Updating Git Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ include/dev/
 include/nanvix/kernel/
 
 # Nanvix Library
+include/nanvix/runtime/barrier.h
 include/nanvix/runtime/stdikc.h
 include/nanvix/sys/
 
